plugins {
	id 'org.springframework.boot' version '2.1.3.RELEASE'
	id 'java'
	id 'application'
}

apply plugin: 'io.spring.dependency-management'
apply plugin: 'output'
apply plugin: 'base-settings'

group = 'com.baidu.iot.devicecloud'
sourceCompatibility = '1.8'

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

dependencies {
//    compile 'org.springframework.boot:spring-boot-starter-actuator'
    compile 'org.springframework.boot:spring-boot-starter-cache'
    compile 'org.springframework.boot:spring-boot-starter-validation'
    compile 'org.springframework.boot:spring-boot-starter-webflux'
    compile 'org.springframework.retry:spring-retry'
	compile 'com.baidu.bigpipe:bigpipe4j:1.3.5.3'
//	compile 'com.baidu:brpc-java-icode:2.5.2'
	// https://mvnrepository.com/artifact/com.google.guava/guava
	compile group: 'com.google.guava', name: 'guava', version: '27.0.1-jre'
	// https://mvnrepository.com/artifact/com.squareup.okhttp3/okhttp
	compile group: 'com.squareup.okhttp3', name: 'okhttp', version: '3.13.1'
	compile group: 'com.squareup.okhttp3', name: 'logging-interceptor', version: '3.13.1'
	// https://mvnrepository.com/artifact/commons-fileupload/commons-fileupload
	compile group: 'commons-fileupload', name: 'commons-fileupload', version: '1.4'
	// https://mvnrepository.com/artifact/commons-codec/commons-codec
	compile group: 'commons-codec', name: 'commons-codec', version: '1.12'
	compile rootProject.fileTree(dir: rootProject.libDir, include: '*.jar')

	compileOnly 'org.projectlombok:lombok'
//	runtimeOnly 'org.springframework.boot:spring-boot-devtools'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'io.projectreactor:reactor-test'
}

application {
    applicationName = 'devicecloud-device-manager'
    mainClassName = 'com.baidu.iot.devicecloud.devicemanager.DeviceManagerApplication'
    applicationDefaultJvmArgs += ["-Dservice.name=${applicationName}", "-XX:+UseConcMarkSweepGC" ,
                       "-XX:+CMSParallelRemarkEnabled","-XX:CMSInitiatingOccupancyFraction=60",
                       "-XX:+UseCMSInitiatingOccupancyOnly", "-Xmx8g", "-Xms8g", "-Xmn3g", "-Xss256k",
                       "-XX:SurvivorRatio=2", "-XX:MetaspaceSize=256m", "-XX:MaxTenuringThreshold=15",
                       "-XX:+UseCMSCompactAtFullCollection","-XX:CMSFullGCsBeforeCompaction=10",
                       "-XX:+CMSScavengeBeforeRemark","-XX:+ScavengeBeforeFullGC","-XX:+DisableExplicitGC",
                       "-XX:ParallelGCThreads=20"]
}
output.thisProject = true
jar.enabled = true
bootJar.enabled = false
defaultTasks 'clean', 'output'